@@ -24,6 +24,8 @@ import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLClassLoader;
 import java.security.AllPermission;
@@ -41,6 +43,7 @@ import java.util.zip.ZipException;
 import java.util.zip.ZipFile;
 import org.openide.ErrorManager;
 import org.openide.util.Exceptions;
+import org.openide.util.Utilities;
 
 /**
  * Custom classloader for Persistence plugin. It subclasses URLClassLoader
@@ -114,18 +117,14 @@ public class CustomClassLoader extends URLClassLoader {
             fileName = name + ".class";
         }
         Class loadedClass = null;
-        InputStream is = getLocalResourceAsStream(packageName, fileName);
-        if (is != null) {
-            try {
+        try (InputStream is = getLocalResourceAsStream(packageName, fileName)) {
+            if (is != null) {
                 loadedClass = loadClass(name, is);
-            } finally {
-                try {
-                    is.close();
-                } catch (IOException ex) {
-                    // Ignore it
-                }
-            }
+            } 
+        } catch (IOException ex) {
+            // Ignore it
         }
+
         if (loadedClass != null) {
             return loadedClass;
         }
@@ -134,8 +133,7 @@ public class CustomClassLoader extends URLClassLoader {
     }
 
     private Class loadClass(String className, InputStream is) {
-        try {
-            BufferedInputStream bis = new BufferedInputStream(is);
+        try (BufferedInputStream bis = new BufferedInputStream(is)) {
             ByteArrayOutputStream os = new ByteArrayOutputStream();
             byte[] bytes = new byte[1024 * 5];
             int readBytes;
@@ -166,7 +164,7 @@ public class CustomClassLoader extends URLClassLoader {
         if (packageName != null) {
             preferred = package2File.get(packageName);
         }
-        List<File> files = new ArrayList<File>();
+        List<File> files = new ArrayList<>();
         if (preferred != null) {
             files.add(preferred);
         }
@@ -184,9 +182,7 @@ public class CustomClassLoader extends URLClassLoader {
                 }
             } else {
                 if (entry.isFile() && entry.exists()) {
-                    ZipFile zf = null;
-                    try {
-                        zf = new ZipFile(entry);
+                    try (ZipFile zf = new ZipFile(entry)) {
                         // Zip entries are delimited by /
                         name = name.replaceAll("\\\\", "/");
                         ZipEntry zipEntry = zf.getEntry(name);
@@ -196,7 +192,7 @@ public class CustomClassLoader extends URLClassLoader {
                             if (!url.startsWith("/")) {
                                 url = "/" + url;
                             }
-                            URL r = new URL("jar:file://" + url + "!/" + name);
+                            URL r = new URI("jar:file://" + url + "!/" + name).toURL();
                             package2File.put(packageName, entry);
                             return r;
                         }
@@ -204,13 +200,8 @@ public class CustomClassLoader extends URLClassLoader {
                         // continue
                     } catch (IOException ex) {
                         // continue
-                    } finally {
-                        try {
-                            if(zf!=null){
-                                zf.close();
-                            }
-                        } catch (IOException ex) {
-                        }
+                    } catch (URISyntaxException ex) {
+                        // continue
                     }
                 }
             }
